--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,12 @@
       <p>Use external or internal templates and styles!</p>
       <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
     </div>
+     <div class="col-xs-12">
+      <app-warningAlert></app-warningAlert>
+    </div>
+    <div class="col-xs-12">
+      <app-success-alert></app-success-alert>
+    </div>
   </div>
 </div>
 
