--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,37 @@
   <div class="row">
     <div class="col-xs-12">
       <ol>
-        <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
-        <li>Output them beneath each other in the AppComponent</li>
-        <li>Output a warning or success message in the Components</li>
-        <li>Style the Components appropriately (maybe some red/ green text?)</li>
+        <li>Add A button which says 'Display Details'</li>
+        <li>
+          Add a paragraph with any content of your choice (e.g. 'Secret Password
+          = tuna')
+        </li>
+        <li>
+          Toggle the displaying of that paragraph with the button created in the
+          first step
+        </li>
+        <li>
+          Log all button clicks in an array and output that array below the
+          secret paragraph (maybe log a timestamp or simply an incrementing
+          number)
+        </li>
+        <li>
+          Starting at the 5th log item, give all future log items a blue
+          background (via ngStyle) and white color (ngClass)
+        </li>
       </ol>
-      <p>Use external or internal templates and styles!</p>
-      <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
+
+      <button class="btn btn-primary" (click)="toggleParagraph()">Display Details</button>
+      <p *ngIf="firststep">Secret Password = tuna
+      </p>
+      <div class="logarray" 
+      *ngFor ="let values of buttonLog"
+      [ngStyle]="{ backgroundColor : values >= 5  ? 'blue' : 'transparent'}"
+      [ngClass]="{'white' :  values >= 5}"
+      >
+        {{values}}
+      </div>
+      
     </div>
   </div>
 </div>
-
